--- a/movie_search/index.html
+++ b/movie_search/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="imgtest/claquete.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>movie_search</title>
+    <title>LetterPixel</title>
   </head>
   <body>
     <div id="root"></div>
